--- a/package.json
+++ b/package.json
@@ -1,7 +1,17 @@
 {
+  "name": "ia-vendipromax",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
-    "axios": "^1.13.2",
+    "axios": "^1.6.0",
     "cors": "^2.8.5",
-    "express": "^5.2.1"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2"
   }
 }
